kube-system/kubernetes-dashboard.ingress.argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-http-ingress
spec:
  rules:
    - host: "dashboard.k8s.test"
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ubernetes-dashboard
                port:
                  number: 443
